@@ -1,8 +1,6 @@
 solution "PremakeTestbox"
 	configurations { "Debug", "Release" }
 	
-	location "build"
-	
 -- solution level configuration
 	
 	configuration "Debug"
